# SemPoziare

semka/: Bunka.cpp  Bunka.h  CMakeLists.txt  Mapa.cpp  Mapa.h  MySocket.cpp  MySocket.h  Simulacia.cpp  Simulacia.h  aktualnySvet.txt  main.cpp
untitled10/: main.cpp
